<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/md_white_1000"
    card_view:cardCornerRadius="0dp"
    card_view:cardPreventCornerOverlap="true"
    card_view:cardElevation="2dp"
    card_view:cardUseCompatPadding="false"
    card_view:contentPadding="0dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_marginTop="8dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:padding="12dp"
                android:textAppearance="@style/TextAppearance.Bold"
                android:text="@string/related_products_section_title"
                android:textColor="@color/secondary_text"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <!--
            <TextView
                android:id="@+id/related_products_more_button"
                android:textColor="@color/link_text"
                android:textSize="14sp"
                android:textAppearance="@style/TextAppearance.Bold"
                android:text="@string/more_text"
                android:layout_alignParentLeft="true"
                android:padding="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            -->
        </RelativeLayout>

        <View
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#ccc" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/related_products_empty_message"
                android:visibility="gone"
                android:padding="16dp"
                android:gravity="center"
                android:singleLine="true"
                android:maxLines="1"
                android:textSize="14sp"
                android:textAppearance="@style/TextAppearance.Bold"
                android:textColor="@color/hint_text"
                android:text="@string/related_product_empty_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <android.support.v7.widget.RecyclerView
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:rotationY="180"
                android:visibility="gone"
                android:id="@+id/related_product_list"
                android:layout_width="match_parent"
                android:layout_height="244.0dp" />

            <!-- Loading progress -->
            <ProgressBar android:id="@+id/related_products_load_progress"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:padding="16dp"
                android:visibility="gone" />

            <LinearLayout
                android:background="@color/md_red_50"
                android:padding="16dp"
                android:id="@+id/related_products_load_error_layout"
                android:visibility="gone"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/related_products_load_error_desc"
                    android:drawableRight="@mipmap/ic_problem"
                    android:drawablePadding="8dp"
                    android:visibility="visible"
                    android:gravity="center_horizontal"
                    android:text="@string/network_error"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:textSize="16sp"
                    android:textAppearance="@style/TextAppearance.Bold"
                    android:textColor="@color/secondary_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <Button android:id="@+id/related_products_load_retry_button"
                    android:layout_width="65dp"
                    android:layout_height="35dp"
                    android:text="@string/button_retry"
                    android:padding="0dp"
                    android:layout_marginTop="8dp"
                    android:textSize="12sp"
                    android:textColor="@color/md_white_1000"
                    android:background="@color/md_grey_500"
                    android:textAppearance="@style/TextAppearance.Bold"
                    android:visibility="visible" />

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>